<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.mandy.getthearea.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_the_number_of_sides_in_your_plot"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="@dimen/textView_height"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/three_sides"
            android:id="@+id/side3"
            android:checked="false"
            android:textSize="@dimen/radioButton_fontsize"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_side"
            android:id="@+id/side4"
            android:checked="false"
            android:textSize="@dimen/radioButton_fontsize"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_side_with_a_diagonal"
            android:id="@+id/side3wiith1"
            android:checked="false"
            android:textSize="@dimen/radioButton_fontsize"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/oksides"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff" />

</RelativeLayout>
