<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.mandy.getthearea.result"
    android:id="@+id/q">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:id="@+id/textView15"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textView_height"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter_square"
        android:id="@+id/textView16"
        android:textColor="@color/abc_search_url_text_selected"
        android:layout_below="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/widtharea"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bigah"
        android:id="@+id/textView17"
        android:textColor="@color/abc_search_url_text_selected"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/widtharea"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acres"
        android:id="@+id/textView18"
        android:textColor="@color/abc_search_url_text_selected"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView17"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/widtharea"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feet_square"
        android:id="@+id/textView19"
        android:textColor="@color/abc_search_url_text_selected"
        android:textSize="@dimen/widtharea"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView20"
        android:layout_alignRight="@+id/textView21"
        android:layout_alignEnd="@+id/textView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inch_square"
        android:id="@+id/textView20"
        android:textColor="@color/abc_search_url_text_selected"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/widtharea"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yard_square"
        android:id="@+id/textView21"
        android:textColor="@color/abc_search_url_text_selected"
        android:textSize="@dimen/widtharea"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_home"
        android:id="@+id/gootohome_button"
        android:layout_marginBottom="27dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hectare"
        android:id="@+id/textView23"
        android:textColor="@color/abc_search_url_text_selected"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:textSize="@dimen/widtharea"/>

    <EditText

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText13"
        android:width="@dimen/width"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="right"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sq mt"
        android:id="@+id/textView22"
        android:textColor="@android:color/tab_indicator_text"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:layout_alignBaseline="@+id/editText13"
        android:layout_alignBottom="@+id/editText13"
        android:layout_toRightOf="@+id/editText13"
        android:layout_toEndOf="@+id/editText13" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText14"


        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:width="@dimen/width"
        android:gravity="right"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignLeft="@+id/editText13"
        android:layout_alignStart="@+id/editText13" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText15"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:width="@dimen/width"
        android:gravity="right"

        android:layout_alignBaseline="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:layout_toLeftOf="@+id/textView22"
        android:layout_toStartOf="@+id/textView22" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText16"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:width="@dimen/width"
        android:gravity="right"
        android:layout_alignBaseline="@+id/textView23"
        android:layout_alignBottom="@+id/textView23"
        android:layout_alignLeft="@+id/editText15"
        android:layout_alignStart="@+id/editText15" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText17"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:width="@dimen/width"
        android:gravity="right"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignLeft="@+id/editText16"
        android:layout_alignStart="@+id/editText16" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText18"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:width="@dimen/width"
        android:gravity="right"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignLeft="@+id/editText17"
        android:layout_alignStart="@+id/editText17" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText19"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:width="@dimen/width"
        android:gravity="right"
        android:layout_alignBaseline="@+id/textView21"
        android:layout_alignBottom="@+id/textView21"
        android:layout_toLeftOf="@+id/textView22"
        android:layout_toStartOf="@+id/textView22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="bigah"
        android:id="@+id/textView24"
        android:textColor="@android:color/tab_indicator_text"
        android:layout_alignBaseline="@+id/editText14"
        android:layout_alignBottom="@+id/editText14"
        android:layout_alignLeft="@+id/textView22"
        android:layout_alignStart="@+id/textView22"
        android:nestedScrollingEnabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ac"
        android:id="@+id/textView25"
        android:layout_alignBottom="@+id/textView18"
        android:layout_alignLeft="@+id/textView24"
        android:layout_alignStart="@+id/textView24"
        android:textColor="@android:color/tab_indicator_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ha"
        android:id="@+id/textView26"
        android:layout_alignBottom="@+id/textView23"
        android:layout_alignLeft="@+id/textView25"
        android:layout_alignStart="@+id/textView25"
        android:textColor="@android:color/tab_indicator_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sq inches"
        android:id="@+id/textView27"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignLeft="@+id/textView26"
        android:layout_alignStart="@+id/textView26"
        android:textColor="@android:color/tab_indicator_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sq ft"
        android:id="@+id/textView28"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignLeft="@+id/textView27"
        android:layout_alignStart="@+id/textView27"
        android:textColor="@android:color/tab_indicator_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sq yards"
        android:id="@+id/textView29"
        android:layout_alignBottom="@+id/textView21"
        android:layout_alignLeft="@+id/textView28"
        android:layout_alignStart="@+id/textView28"
        android:textColor="@android:color/tab_indicator_text" />


</RelativeLayout>



